+created unctionality for entities with auto id gen where apllicable
