# src/lobby/LobbyRoutesProvider.php
@@ -84,10 +84,11 @@ class LobbyRoutesProvider implements ControllerProviderInterface
 
 
         /**
-         * @SWG\Post(
+         * @SWG\Post(         *
+         *     description="Creates a Lobby",
          *     tags={"lobby"},
          *     path="/lobby/",
-         *     @SWG\Parameter(ref="#/parameters/gameId"),
+         *     @SWG\Parameter(name="lobby", in="body", @SWG\Schema(ref="#/definitions/Lobby")),
          *     @SWG\Response(response="200", description="The created Lobby", @SWG\Schema(ref="#/definitions/Lobby"))
          * )
          *
